# mcp-aws-handbook

./: .env.template  .gitignore  README.md  command.sh  shell.sh
chapter4/claude-code-mcp/: .mcp.json
chapter4/client_primitives/host/: .gitignore  0_rich_sample.py  1_sampling_host.py  2_roots_host.py  3_elicitation_host.py  pyproject.toml
chapter4/client_primitives/server/: 1_sampling_server.py  2_roots_server.py  3_elicitation_server.py  pyproject.toml
chapter4/server_primitives/host/: 0_base.py  1_prompts_host.py  2_resources_host.py  3_tools_host.py  4_streamable_http_host.py  pyproject.toml
chapter4/server_primitives/host_copy/: 0_base.py  1_prompts_host.py  2_resources_host.py  3_tools_host.py  (+1 more)
chapter5/convert-server/: .bedrock_agentcore.yaml  convert_server.py  convert_sever.py  pyproject.toml  requirementst.txt
chapter5/convert-server-client/: agent.py  aws_credentials.py  check_dynamodb.py  pyproject.toml
chapter5/rag-agent/: agent.py  agent_with_kb.py  app.py  app_with_kb.py  pyproject.toml  test_result_aws_bedrock_api_key.md
chapter5/research-agent/: Dockerfile  create_lambda_role.py  pyproject.toml  requirements.txt  research_agent lambda.py  research_agent.py  research_agent_lambda.py  step_functions_content.txt  コマンド.txt
chapter6/eval-agent/: addsub_server.py  calc_agent.py  muldiv_server.py  pyproject.toml
chapter6/gateway-client/: agent.py  pyproject.toml
chapter6/llm-as-a-judge/: eval.py  pyproject.toml
chapter6/target-lambda/: csv_json.py  schema.txt
chapter6/target-mcp-server/: json_yaml.py  pyproject.toml  requirements.txt
(+13 files in other folders)
