[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore-starter-toolkit>=0.1.28",
    "boto3==1.40.69",
    "mcp>=1.21.0",
    "nest-asyncio==1.6.0",
    "python-dotenv==1.1.0",
    "strands-agents==1.12.0",
]
